--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -19,7 +19,7 @@ html {
 body {
     font-size: 2rem;
     font-family: var(--main-font);
-    line-height: 1.5;
+    line-height: 1.7;
 }
 
 img {
@@ -41,8 +41,119 @@ main {
     margin: 5rem 0;
 }
 
-/** BAR **/
+/** Header **/
 
-.navigation__link {
+.header {
+    background-image: linear-gradient(to right, rgb(0 0 0 / .8), rgb(0 0 0 / .7)), url(/img/header.jpg);
+    padding: 6rem 0;
+    background-size: cover;
+    background-position: left center;
+}
+
+.bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media(min-width:768px) {
+    .bar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+.header .logo {
+    width: 25rem;
+}
+
+.header .navigation {
+    margin-top: 5rem;
+    display: flex;
+    gap: 2rem;
+}
+
+@media(min-width:768px) {
+    .header .navigation {
+        margin-top: 0;
+    }
+}
+
+.header .navigation__link {
     text-decoration: none;
+    color: var(--white);
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 1.5rem;
+    position: relative;
+}
+
+@media(min-width:768px) {
+    .header .navigation__link::before {
+        content: "";
+        display: block;
+        width: 0;
+        height: 2px;
+        color: transparent;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transition: all 0.4s ease;
+    }
+
+    .header .navigation__link.active::before,
+    .header .navigation__link:hover::before {
+        cursor: pointer;
+        background-color: var(--white);
+        width: 100%;
+        left: 0;
+    }
+}
+
+/** Footer **/
+
+.footer {
+    background-color: var(--black);
+    padding: 5rem 0;
+    margin-top: 5rem;
+}
+
+@media(min-width:768px) {
+    .footer .content {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.footer .navigation {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media(min-width:768px) {
+    .footer .navigation {
+        flex-direction: row;
+        gap: 2rem
+    }
+}
+
+.footer .navigation__link {
+    color: var(--white);
+    text-decoration: none;
+    text-align: center;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+.footer .copyright {
+    text-align: center;
+    color: var(--white);
+    margin: 4rem 0 0 0;
+}
+
+@media(min-width:768px) {
+    .footer .copyright {
+        margin: 0;
+    }
 }
