--- a/app/styles/shop.css
+++ b/app/styles/shop.css
@@ -21,6 +21,9 @@
     display: grid;
     grid-template-columns: 2fr 3fr;
     gap: 1rem;
+    align-items: center;
+    max-width: 70rem;
+    margin: 0 auto;
 }
 
 .product__content {
