--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -70,6 +70,7 @@ main {
 .header .navigation {
     margin-top: 5rem;
     display: flex;
+    align-items: end;
     gap: 2rem;
 }
 
@@ -110,6 +111,10 @@ main {
     }
 }
 
+.header .navigation img {
+    width: 2.8rem;
+}
+
 /** Footer **/
 
 .footer {
@@ -144,6 +149,10 @@ main {
     text-align: center;
     font-size: 2.8rem;
     font-weight: 700;
+}
+
+.footer .navigation__link:last-of-type {
+    display: none;
 }
 
 .footer .copyright {
