--- a/app/styles/cart.css
+++ b/app/styles/cart.css
@@ -1,6 +1,7 @@
 .cart__content {
     display: grid;
     gap: 5rem;
+    align-items: start;
 }
 
 @media(min-width:768px) {
@@ -14,4 +15,72 @@
     background-color: #F9FAFB;
     padding: 3rem;
     border-radius: 1rem;
+    position: sticky;
+    top: 3rem;
+}
+
+.cart__title {
+    text-align: center;
+}
+
+.item {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 4rem;
+    align-items: center;
+    padding: 3rem 0;
+    border-bottom: 1px solid #CFCFCF;
+    position: relative;
+}
+
+.item:last-of-type {
+    border: none
+}
+
+.item p {
+    margin: 0 0 1rem 0;
+}
+
+.item__name {
+    font-weight: 700;
+    font-size: 4.2rem;
+}
+
+.item__price {
+
+    color: var(--primary);
+}
+
+.item__price span,
+.item__subtotal span {
+    font-weight: 900;
+    font-size: 2.2rem;
+}
+
+.form label {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+select {
+    display: block;
+    text-align: center;
+    padding: .5rem;
+    border-radius: 1rem;
+    border: 1px solid #CFCFCF;
+    width: 20rem
+}
+
+.item__delete-button {
+    padding: 1rem;
+    border-radius: .5rem;
+    font-size: 2rem;
+    font-weight: 900;
+    color: red;
+    border: 3px red solid;
+    background-color: transparent;
+}
+
+.item__delete-button:hover {
+    cursor: pointer;
 }
